# Q-VOID-OS-V3.0

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MARKETING.md  README.md  generate_pdf.py  howitworks.md  requirements.txt  run_all_tests.py  verify.py
cli/: __init__.py  qvoid.py
controller/: __init__.py  qvoid_controller.py
core/: __init__.py  qvoid_core.py  threat_pipeline.py
dna/: __init__.py  dna_encryptor.py
docs/: ARCHITECTURE.md  DEMO.md  MODULES.md
examples/: __init__.py  flagship_demo.py
forge/: __init__.py  digital_forge.py
ghostfs/: __init__.py  ghost_fs.py
hivemind/: __init__.py  hivemind_daemon.py  peer_auth.py  swarm_compute.py
llm/: __init__.py  llm_adapter.py  prompts.py
mcp/: __init__.py  mcp_router.py  retaliation_engine.py
modules/: __init__.py  registry.py
oracle/: __init__.py  heuristic_oracle.py
polymorphic/: __init__.py  code_mutator.py  mutation_strategies.py  polymorph_engine.py
precog/: __init__.py  precog_engine.py
qcrypt/: __init__.py  dynamic_cipher.py  pqc_adapter.py  qcrypt_engine.py
qpm/: __init__.py  qpm_cli.py
rag/: __init__.py  rag_engine.py
rust_core/: Cargo.toml  __init__.py  engine.py
rust_core/src/: lib.rs
terminal_ui/: __init__.py  dashboard.py  qvoid_shell.py
tests/: test_flagship_demo.py  test_ghostfs.py  test_module_registry.py  test_qcrypt.py  test_qpm.py
trap/: __init__.py  deception_network.py  fake_data_generator.py  illusion_shell.py
